6-Authorise_the_workloads/default-allow-nothing-auth.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-nothing
  namespace: istio-system
spec: 
  {}
